# proxy-tm

./: .gitignore  Makefile  README.md  gunicorn.conf.py  pyproject.toml  setup.cfg
.github/workflows/: python-ci.yaml
proxy_server/: __init__.py  app.py  asset_parser.py  content_modifier.py  logger.py  settings.py
proxy_server/modificators/: add_tm.py
proxy_server/proxy/: __init__.py  app.py
tests/: test_proxy.py  test_text_modify.py
tests/fixtures/: demo-page.html  example-expected.html  example.html
