[tool.poetry]
name = "proxy-tm"
version = "0.1.3"
description = "Custom™ proxy for news.ycombinator.com"
authors = ["Konstantin Freidlin <freidlinks@ya.ru>"]
packages = [
    { include = "proxy_server" }
]
repository = "https://github.com/mnogom/proxy-tm"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"
requests = "^2.27.1"
gunicorn = "^20.1.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
Flask-Testing = "^0.8.1"
pytest = "^7.1.1"
pytest-coverage = "^0.0"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
